--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,8 @@ management:
     web:
       exposure:
         include: health,info,metrics
+
+logging:
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr([%X{correlationId}]){yellow} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n"
+
